# milika

./: .gitignore  Cargo.toml  README.md  Rakefile  a.ll  a.milika  a.mlir  a.opt.ll  a2.mlir
.github/workflows/: ci.yml
chiika_runtime/: Cargo.toml
chiika_runtime/src/: async_functions.rs  chiika_env.rs  lib.rs  sync_functions.rs
examples/: arg_ref.milika  async.milika  async_if.milika  async_lvar.milika  async_valued_if.milika  countdown.milika  early_return.milika  if.milika  if_return_return.milika  sync.milika  valued_if.milika
src/: ast.rs  ast2hir.rs  async_splitter.rs  asyncness_check.rs  compiler.rs  hir.rs  hir_lowering.rs  main.rs  parser.rs  prelude.rs  typing.rs  verifier.rs
src/hir/: asyncness_check.rs  blocked.rs  expr.rs  propagate_asyncness.rs  rewriter.rs  split.rs  ty.rs  typing.rs  untyped.rs  visitor.rs
src/hir_lowering/: async_splitter.rs  lower_async_if.rs  lower_if.rs  lower_while.rs
