[package]
name = "milika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
melior = {version = "0.15.2", features = ["ods-dialects"]}
chumsky = "0.9.3"
ariadne = "0.3.0"
anyhow = "1.0"
either = "1.9.0"
