[package]
name = "milika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#melior = { features = ["ods-dialects"], path = "../melior/melior"}
melior = {version = "0.17.0", features = ["ods-dialects"]}
nom = "7.1.3"
peg = "0.8.2"
ariadne = "0.3.0"
anyhow = "1.0"
either = "1.9.0"
nom_locate = "4.2.0"
train-map = "0.1.1"
